hphp/test/zend/good/Zend/tests/foreach_undefined.php.expectf
Fatal error: Uncaught exception '%s' with message '%s' in %s/foreach_undefined.php:3
Stack trace:
%A
